<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
<EditText
        android:id="@+id/editLink"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:inputType="text"
        android:layout_width="match_parent"
        android:text="@string/link">
        
</EditText>
<EditText
        android:id="@+id/editDescr"
        android:layout_height="wrap_content"
        android:layout_marginTop="194dp"
        android:inputType="text"
        android:layout_width="match_parent"
        android:text="@string/url">
</EditText>

<Button
android:id="@+id/button3"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_alignParentTop="true"
android:layout_centerHorizontal="true"
android:layout_marginTop="254dp"
android:onClick="insertDataLink"
android:text="@string/submit" />

</RelativeLayout>

